--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,26 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+$light-gray: #8c8c88;
+$brand-color: #171759;
+
+.pad20 {
+  margin-top: 20px;
+}
+
+.pad10 {
+  margin-top: 10px;
+}
+
+.text-underline {
+  text-decoration: underline;
+}
+
+.text-gray {
+  color: $light-gray;
+}
+
+.text-brand {
+  color: $brand-color;
+}
