--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,10 +1,13 @@
 <div class="container pad20">
-  <h1 class="text-underline text-brand">Your Cocktails</h1>
+  <h1 class="text-underline text-brand">My Cocktails</h1>
   <div>
     <% @cocktails.each do |cocktail| %>
     <div class="col-xs-12 col-sm-4">
       <div class="card">
         <div class="card-description">
+          <% if cocktail.photo.attached? %>
+            <%= cl_image_tag cocktail.photo.key, width: 400, height: 300, crop: :fill %>
+          <% end %>
           <h2><%= cocktail.name %></h2>
         </div>
         <%= link_to cocktail.name, cocktail_path(cocktail.id) %>
