--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,23 +1,21 @@
-<div class="container pad20">
-  <h1 class="text-underline text-brand">My Cocktails</h1>
-  <div>
-    <% @cocktails.each do |cocktail| %>
-    <div class="col-xs-12 col-sm-4">
-      <div class="card">
-        <div class="card-description">
+<div class="container p-4">
+  <h1 class="text-underline text-center">Mo'jito, Mo'fun</h1>
+
+  <% @cocktails.each do |cocktail| %>
+    <div class="container mb-3">
+      <div class="banner" style="background-color: #DD6031; color:white">
+        <div class="d-flex justify-content-center">
           <% if cocktail.photo.attached? %>
-            <%= cl_image_tag cocktail.photo.key, width: 400, height: 300, crop: :fill %>
+            <h1><%= cocktail.name %></h1>
+            <%= cl_image_tag cocktail.photo.key, width: 100, height: 80, crop: :fill %>
+            <%= link_to "Peek inside", cocktail_path(cocktail.id) %>
           <% end %>
-          <h2><%= cocktail.name %></h2>
         </div>
-        <%= link_to cocktail.name, cocktail_path(cocktail.id) %>
-
       </div>
-      </div>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
 
-  <div class="pad10">
+  <div class="d-flex justify-content-center">
     <%= link_to "Add a cocktail", new_cocktail_path, class: "btn btn-primary pad20" %>
   </div>
 </div>
